2011-06-10  Denis Lila  <dlila@redhat.com>

	* pulseaudio/*: Fix whitespace.

2011-06-10  Denis Lila  <dlila@redhat.com>

	* Makefile.am
	(stamps/pulse-java-headers.stamp): Prepend the java build directory
	to the boot class path to avoid generating headers for the system
	pulse-java classes.

2012-02-16  Xerxes Rånby  <xerxes@zafena.se>

	(HOTSPOT_CHANGESET): Add latest Zero HS22 fixes.
	(HOTSPOT_SHA256SUM): Likewise.

2012-02-15  Andrew John Hughes  <ahughes@redhat.com>

	* NEWS: Add 2.0.1 and 2.1.0 release notes.
	* configure.ac: Bump to 2.2pre.

2012-02-14  Andrew John Hughes  <ahughes@redhat.com>

	* NEWS: Update with OpenJDK fixes and
	add release date for 2.1.

2012-02-14  Andrew John Hughes  <ahughes@redhat.com>

	(HOTSPOT_CHANGESET): Add latest fixes:
	7140882, 7049339 and 7091528.
	(HOTSPOT_SHA256SUM): Likewise.
	(JDK_CHANGESET): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.

2012-02-10  Xerxes Rånby  <xerxes@zafena.se>

	* Makefile.am
	(CACAO_VERSION): Updated CACAO to 2012-02-09 revision.
	(CACAO_SHA256SUM): Updated.
	(stamps/cacao.stamp): Use --with-java-runtime-library=openjdk7.
	Add -f when creating client and server symlinks to handle repeat builds.
	Link the fake libjsig.so to CACAO libjvm.so, and touch fake Xusage.txt
	to work with latest OpenJDK ALT_HOTSPOT_IMPORT_PATH functionality.
	* patches/cacao/version.patch: Removed, replaced by upstream CACAO changeset 30edcde287d9.

2012-02-08  Andrew John Hughes  <ahughes@redhat.com>

	(HOTSPOT_CHANGESET): Bump to fix HotSpot merge
	issue.
	(HOTSPOT_SHA256SUM): Likewise.

2012-02-08  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Move JDK_UPDATE_VERSION and COMBINED_VERSION
	to top of file with OPENJDK_VERSION.
	(JDK_UPDATE_VERSION): Set to 02 for u2.

2012-02-08  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(CORBA_CHANGESET): Updated.
	(HOTSPOT_CHANGESET): Likewise.
	(JAXP_CHANGESET): Likewise.